fixed the pseudo elements not working on safari ios

--- a/client/src/components/Projects/Project.css
+++ b/client/src/components/Projects/Project.css
@@ -4,10 +4,12 @@
 }
 
 .project:hover {
+    -webkit-appearance: none;
     transform: scale(1.02);
 }
 
 .project:active{
+    -webkit-appearance: none;
     transform:scale(0.95);
 }
 
